Fix map disclaimer not showing properly when page is zoomed in

--- a/ckanext/montrose/fanstatic/style.css
+++ b/ckanext/montrose/fanstatic/style.css
@@ -6885,22 +6885,14 @@ button.close {
 
 .hero-info {
     position: absolute;
-    right: -30px;
-    left: auto;
-    top: 410px;
+    right: 12px;
+    bottom: 10px;
     width: 54px;
-    z-index: 99;
+    z-index: 401;
     border-radius: 6px;
     padding: 2px;
     border: 5px solid #fff;
     background-color: rgba(255, 255, 255, .95)
-}
-
-@media screen and (max-width: 991px) {
-    .hero-info {
-        top: 905px;
-        right: -25px;
-    }
 }
 
 .hero-select {
